# dao-up

./: README.md
contracts/: Cargo.toml  README.md  get_code_id.sh
contracts/artifacts/: checksums.txt  checksums_intermediate.txt  cw20_dao_crowdfund.wasm  fee_manager.wasm
contracts/cw20-dao-crowdfund/: Cargo.toml
contracts/cw20-dao-crowdfund/artifacts/: checksums.txt  checksums_intermediate.txt  cw20_dao_crowdfund.wasm
contracts/cw20-dao-crowdfund/cw20-dao-crowdfund_schema/: dump_state_response.json  instantiate_msg.json  state.json
contracts/cw20-dao-crowdfund/examples/: schema.rs
contracts/cw20-dao-crowdfund/schema/: campaign.json  dump_state_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  state.json
contracts/cw20-dao-crowdfund/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/cw20-updatable-minter/: Cargo.toml  README.md
contracts/cw20-updatable-minter/schema/: execute_msg.json
contracts/cw20-updatable-minter/src/: enumerable.rs
contracts/fee-manager/: Cargo.toml  NOTICE
contracts/fee-manager/examples/: schema.rs
contracts/fee-manager/fee-manager_schema/: execute_msg.json  state.json
contracts/fee-manager/schema/: config_response.json  config_update.json  execute_msg.json  instantiate_msg.json  state.json
contracts/fee-manager/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs  validators.rs
dao-up/contracts/: README
dao-up/contracts/cw20-dao-crowdfund/: Cargo.toml
dao-up/contracts/cw20-dao-crowdfund/artifacts/: checksums_intermediate.txt
dao-up/contracts/cw20-dao-crowdfund/schema/: dump_state_response.json  instantiate_msg.json  state.json
dao-up/contracts/cw20-dao-crowdfund/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
dao-up/contracts/cw20-updatable-minter/: Cargo.toml
dao-up/contracts/cw20-updatable-minter/src/: contract.rs  msg.rs
dao-up/contracts/escrow/: Cargo.toml
dao-up/contracts/escrow/examples/: schema.rs
dao-up/contracts/escrow/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
docs/: package-lock.json  package.json  tailwind.config.js  theme.config.js
docs/pages/: backing-a-campaign.mdx  campaign-closing.md  campaign-closing.mdx  campaign-creation.mdx  evaluating-campaigns.md  evaluating-campaigns.mdx  get-started.mdx  index.mdx  meta.json  updating-a-campaign.md
ui/: .env.example  .env.mainnet.example  .env.testnet.example  .eslintrc.json  README.md  config.ts  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.properties  tailwind.config.js  theme.js  tsconfig.json  types.d.ts  types.ts
ui/components/: Alert.tsx  BalanceRefundCard.tsx  Banner.tsx  Button.tsx  ButtonLink.tsx  Campaign.tsx  CampaignCards.tsx  CampaignDetails.tsx  CampaignInfoCard.tsx  CampaignStateCard.tsx  CampaignUtils.tsx  CampaignsListPagination.tsx  Carousel.tsx  CenteredColumn.tsx  ContributeCard.tsx  ContributeForm.tsx  ContributionGraph.tsx  ContributionGraphCard.tsx  EditCampaignForm.tsx  ErrorBoundary.tsx  FAQQuestion.tsx  Footer.tsx  FundPendingCard.tsx  GovernanceCard.tsx  Header.tsx  HomepageFeaturedCampaigns.tsx  ImageUrlsUtils.tsx  InitialDistribution.tsx  InitialDistributionEditor.tsx  Input.tsx  InstallWalletMessage.tsx  Loader.tsx  PendingCard.tsx  ResponsiveDecoration.tsx  Select.tsx  StatusIndicator.tsx  Suspense.tsx  TooltipInfo.tsx  TxnPollTimeoutError.tsx  VisibilityToggle.tsx  (+2 more)
ui/components/cards/: BalanceRefundCard.tsx  BalanceRefundJoinCard.tsx  CTACard.tsx  CampaignCards.tsx  CampaignInfoCard.tsx  CardWrapper.tsx  ContributeCard.tsx  ContributionGraphCard.tsx  FundPendingCard.tsx  GovernanceCard.tsx  ProposeFundPendingCard.tsx
ui/components/icons/: Discord.tsx  DiscordIcon.tsx  GitHubIcon.tsx  Github.tsx  PencilIcon.tsx  Twitter.tsx  TwitterIcon.tsx
ui/helpers/: config.ts  dom.ts  error.ts  error.tsx  filter.ts  form.ts  form.tsx  index.ts  number.ts  theme.js  wallet.ts
ui/hooks/: index.ts  useCampaign.ts  useCampaigns.ts  useContributeCampaign.ts  useCopy.ts  useCreateCampaign.ts  useFundPendingCampaign.ts  useGetCampaigns.ts  usePayTokenUtil.ts  useProposeFundPendingCampaign.ts  useRefCallback.ts  useRefreshCampaign.ts  useRefundCampaign.ts  useRefundJoinDAOForm.ts  useUpdateCampaign.ts  useWallet.ts  useWallet.tsx  useWindowSize.ts
ui/pages/: 404.tsx  _app.tsx  campaigns.tsx  create.tsx  index.tsx  me.tsx
ui/pages/campaign/: [address].tsx  [id].tsx
ui/pages/create/: 2.tsx  3.tsx  4.tsx  5.tsx  index.tsx  review.tsx
ui/services/: campaigns.ts  campaigns.tsx  chain.ts  index.ts  keplr.ts  keplr.tsx  state.ts  token_list.json  tokens.ts  web3.ts
ui/state/: campaigns.ts  client.ts  config.ts  dao.ts  effects.ts  global.ts  index.ts  loading.ts  token.ts  web3.ts
ui/styles/: globals.css  globals.scss
ui/types/: campaign.ts  chain.ts  index.ts  miscellaneous.ts  selectors.ts
