[package]
name = "cw20-dao-crowdfund"
version = "0.3.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""
optimize-fish = """docker run --rm -v (pwd):/code \
  --mount type=volume,source=(basename (pwd))"_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
cosmwasm-std = { version = "= 1.0.0-beta4" }
cosmwasm-storage = { version = "1.0.0-beta4" }
cw-storage-plus = "0.11"
cw2 = "0.11"
cw3 = "0.11"
cw20 = "0.11"
cw-utils = "0.11"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw3-dao = { version = "0.2.5", git = "https://github.com/DA0-DA0/dao-contracts", tag = "v0.2.5" }
stake-cw20 = { version = "0.2.5", git = "https://github.com/DA0-DA0/dao-contracts", tag = "v0.2.5" }
cw20-base = "0.11"
fee-manager = { version = "0.1.0", path = "../fee-manager" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta4" }
cw-multi-test = "0.11"
cw20-no-instantiate = { version = "0.11", git = "https://github.com/ezekiiel/evil-cw20" }
cw20-silent-instantiate-fail = { version = "0.11", git = "https://github.com/ezekiiel/evil-cw20" }
anyhow = "1"
