[package]
name = "cw20-base"
version = "0.11.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"
description = "Extension of the cw20 token contract to allow transfering minting rights"
license = "Apache-2.0"
repository = "https://github.com/noahsaso/dao-up"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "0.11.1" }
cw2 = { version = "0.11.1" }
cw20 = { version = "0.11.1" }
cw-storage-plus = { version = "0.11.1" }
cosmwasm-std = { version = "1.0.0-beta3" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }
